--- a/themes/greatermedia/assets/css/sass/base/_grid.scss
+++ b/themes/greatermedia/assets/css/sass/base/_grid.scss
@@ -77,6 +77,10 @@ img {
 		@include span-columns(10 of 12);
 		@include shift(1);
 	}
+	@include bp(x-large) {
+		@include span-columns(10 of 12);
+		@include shift(1);
+	}
 }
 
 .live-player{
