--- a/themes/greatermedia/assets/css/sass/home/_blog-roll.scss
+++ b/themes/greatermedia/assets/css/sass/home/_blog-roll.scss
@@ -6,6 +6,42 @@
 	color: $secondary-heading;
 }
 
+.entry__thumbnail {
+	position: relative;
+	float: left;
+	width: 100%;
+	margin-bottom: 34px;
+	@include bp(medium) {
+		width: 35%;
+		margin-bottom: 0;
+	}
+}
+
+.promoted .entry__thumbnail {
+	@include bp(medium) {
+		width: 100%;
+	}
+}
+
+.entry__meta {
+	position: relative;
+	float: left;
+	width: 100%;
+	text-align: center;
+	@include bp(medium) {
+		width: 60%;
+		margin-right: 5%;
+		text-align: left;
+	}
+}
+
+.promoted .entry__meta {
+	@include bp(medium) {
+		width: 100%;
+		margin-right: 0;
+	}
+}
+
 .entry--video__thumbnail, .entry--gallery__thumbnail, .entry--link__thumbnail {
 	position: relative;
 	float: left;
@@ -40,14 +76,25 @@
 	}
 }
 
+.entry__thumbnail {
+	position: relative;
+	float: left;
+	width: 100%;
+	margin-bottom: 34px;
+	@include bp(medium) {
+		width: 35%;
+		 margin-bottom: 0;
+	}
+}
+
 .entry--standard__meta {
 	position: relative;
 	float: left;
 	width: 100%;
 	text-align: center;
 	@include bp(medium) {
-		width: 60.909090909091%;
-		margin-right: 3.636363636364%;
+		width: 60%;
+		margin-right: 5%;
 		text-align: left;
 	}
 }
